# stupidClaw

./: .env.example  .gitignore  AGENTS.md  DEV_TODO.md  README.md  StupidClaw-教程期数规划-v3.md  StupidClaw-文章规划-v3.md  StupidClaw-第1期-先用Polling跑通消息闭环.md  StupidClaw-第2期-从Polling升级到Webhook.md  StupidClaw-第3期-Skills不是越多越好关键是按需披露.md  StupidClaw-第4期-用profile做长期记忆让Agent记住你.md  StupidClaw-第5期-安全沙盒PathJailing防止越权读写.md  StupidClaw-第6期-Cron主动触发让Agent自己干活.md  StupidClaw-第7期-发布与工程收口.md  StupidClaw-详细设计文档-v3.md  USER_STORIES.md  helloworld.html  install.sh  package.json  pnpm-lock.yaml  tsconfig.json
builtin-skills/web_reach/: SKILL.md
docs/: getting-started.md  index.html  models.md  troubleshooting.md
public/: getting-started.md  im.html  index.html  models.md  troubleshooting.md
scripts/: watch-resources.sh
src/: cron.ts  engine.ts  gateway.ts  index.ts  init-providers.ts  init.ts
src/cron/: cron.test.ts  jobs-store.ts
src/memory/: history-store.ts  profile-store.ts  workspace-path.test.ts  workspace-path.ts
src/prompt/: identity.ts
src/skills/: contracts.ts  file-skills.ts  registry.ts
src/skills/coding/: claude_code.ts
src/skills/cron/: manage_cron_jobs.ts
src/skills/memory/: query_history.ts  update_profile.ts
src/skills/system/: get_system_time.ts  list_available_skills.ts  skill_creator.ts
src/transport/: index.ts  polling.ts  stupid-im.ts  webhook.ts
stupid-claw-desktop/--/: index.html  package-lock.json  package.json  vite.config.ts
stupid-claw-desktop/--/src-tauri/: Cargo.toml  tauri.conf.json
stupid-claw-desktop/--/src-tauri/src/: lib.rs  main.rs
(+90 files in other folders)
